# BackupManager

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
backup_manager/: __init__.py  __main__.py  core.py  logging_config.py  prep.py
backup_manager/config/: settings.toml  settings.toml.example
scripts/: check_deps.py  check_toml.py
